[#23958436] Fix cart drawer not showing

--- a/modules/website/public/assets/styles/custom.css
+++ b/modules/website/public/assets/styles/custom.css
@@ -498,7 +498,7 @@ ins-tag span.ins-tag.blue {
 
 .navigation-04.header {
     border-bottom: 1px solid var(--color-ui-03, #F2F4F8);
-    ;
+    z-index: 999 !important;
 }
 
 .navigation-04 .header-top-bar ins-button.hide-for-small-only {
